# HLC

./: .gitignore  README.md  RESULTS.md  pyproject.toml  requirements.txt
docs/: DISPLACEMENT_PROTOTYPE.md  EVALUATION_PROTOCOL.md  MVP_CONCLUSION.md  REAL_TOFU_FINDINGS.md  REMAINING_EXPERIMENTS.md  SHARPNESS_DURABILITY.md
durable_unlearning/: __init__.py
paper/: README.md  main.tex
scripts/: aggregate_tofu_real.py  calibrate_thresholds.py  compare_methods.py  experiment_status.py  frontier_table.py  make_diagnostic_report.py  make_heldout_stress_relearn_pools.py  make_main_track_table.py  make_prompt_variants.py  make_relearn_pools.py  make_stress_relearn_pools.py  plot_survival.py  prepare_tofu.py  report_conditional_durability.py  report_local_mvp.py  report_update_budget_stress.py  reproduce_displacement_frontier.sh  reproduce_final_diagnostic.sh  reproduce_gpt2_hlc_k2_smoke.sh  reproduce_gpt2_long_horizon.sh  reproduce_gpt2_lora_smoke.sh  reproduce_heldout_stress.sh  reproduce_local_mvp.sh  reproduce_missing_baselines.sh  reproduce_pythia410m_lora_v100_smoke.sh  reproduce_qwen3_lora_v100_smoke.sh  reproduce_syntactic_immediate_matched.sh  reproduce_tofu_real_comparison.sh  reproduce_update_budget_stress.sh  run_grad_ascent_sweep.py  run_hlc_stress_sweep.py  run_matched_stress_eval.py  run_selected_baseline_stress_eval.py  run_strong_npo_sweep.py  run_survival_curve.py  run_syntactic_immediate_sweep.py  select_immediate_matched.py  train_full.py  train_retrain_minus_f.py  unlearn.py
tests/: test_aggregate_tofu_real.py  test_compare_methods.py  test_manifests.py  (+28 more)
(+337 files in other folders)
