[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "durable-unlearning"
version = "0.1.0"
description = "Local-first implementation of Relearning Half-Life Control for durable unlearning experiments."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.2",
  "transformers>=4.44",
  "datasets>=2.20",
  "peft>=0.12",
  "accelerate>=0.33",
  "numpy>=1.26",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["durable_unlearning*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
